Changelog for plone.app.contentmenu

    (name of developer listed in brackets)

plone.app.contentmenu - Unreleased

    - Do not show the add item menu anymore on normal content, but just on
      folderish and default pages. This closes
      http://dev.plone.org/plone/ticket/6744.
      [hannosch]

    - Fixed variable name in the label_item_selected message id. This closes
      http://dev.plone.org/plone/ticket/6584.
      [hannosch]

    - Normalized typeIds on the factories menu, as these are used as CSS ids
      and would otherwise fail W3C validation for types with a space in the
      name. This closes http://dev.plone.org/plone/ticket/6259.
      [hannosch]

plone.app.contentmenu - 1.0b1 Released March 5, 2007

    - Initial package structure.
      [zopeskel]
