@@ -282,8 +282,12 @@ class DisplayMenu(BrowserMenu):
                                      'extra'        : {'id' : id, 'separator' : None, 'class' : ''},
                                      'submenu'      : None,
                                      })
-            # Display the selected item (i.e. the context)
-            results.append({ 'title'        : _(u'label_item_selected', default=u'Item: ${contentitem}', mapping={'contentitem' : context.Title()}),
+            # Make sure the title is unicode
+            title = context.Title()
+            if not isinstance(title, unicode):
+                title = unicode(title, 'utf-8', 'ignore')
+                # Display the selected item (i.e. the context)
+            results.append({ 'title'        : _(u'label_item_selected', default=u'Item: ${contentitem}', mapping={'contentitem' : title}),
                              'description'  : '',
                              'action'       : None,
                              'selected'     : True,
